added cost adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
 
 
 <body>
+    <!-- start header -->
     <div class="header">
         <nav class="menu">
             <ul class="header__list">
@@ -88,6 +89,8 @@
             </div>
         </div>
     </div>
+    <!-- end header -->
+    <!-- start about -->
     <section class="about">
         <div class="about__top">
             <div class="about__top-item">
@@ -148,6 +151,43 @@
             </div>
         </div>
     </section>
+    <!-- end about -->
+    <!-- start cost -->
+    <main class="cost">
+        <div class="cost__title">
+            Стоимость проэкта
+        </div>
+        <div class="container">
+            <div class="cost__inner">
+                <div class="cost__inner-content">
+                    <div class="cost__inner-title">
+                        Узнайте стоимость дизайн-проекта, ответив на 3 вопроса
+                    </div>
+                    <div class="cost__inner-subtitle">
+                        Пройдите короткий тест, узнайте цену, получите консультацию по будущему проекту
+                    </div>
+                    <a href="#" class="cost__btn">
+                    Узнать стоимость
+                </a>
+                </div>
+                <div class="cost__inner-desc">
+                    <div class="cost__inner-pic">
+                        <img src="images/cost/shape.png" alt="shape">
+                    </div>
+                    <ul class="cost__inner-list">
+                        Бонусы:
+                        <li class="cost__inner-item">
+                            чек листы на 5 ошибок в строительстве
+                        </li>
+                        <li class="cost__inner-item">
+                            5 трендов 2021 года на дизайн интерьеров
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- end cost -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
     <script src="js/main.min.js"></script>
 </body>
